--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "colorama>=0.4.6",
     "fastapi>=0.115.12",
+    "hypothesis>=6.131.18",
     "networkx>=3.4.2",
     "pydantic>=2.11.4",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
     "structlog>=25.3.0",
     "typer>=0.15.4",
     "uvicorn>=0.34.2",
