--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "uvicorn>=0.34.2",
 ]
 
+[project.scripts]
+arch = "arch_blueprint_generator.cli.commands:app"
+
 [dependency-groups]
 dev = [
     "hypothesis>=6.131.18",
@@ -26,3 +29,7 @@ dev = [
     "pytest-cov>=6.1.1",
     "ruff>=0.11.10",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
