Add blueprint CLI subcommand

--- a/epic1_features.yaml
+++ b/epic1_features.yaml
@@ -150,6 +150,7 @@ features:
     components:
       - "function version_callback"
       - "function main"
-      - "function blueprint"
+      - "class OutputFormat"
+      - "function blueprint_file"
       - "function scan"
       - "function sync"
